--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,7 @@
     <app-navbar></app-navbar>
     
-    <!-- <div class="container my-5">
+    <div class="container my-5">
         <router-outlet></router-outlet>
-    </div> -->
+    </div>
 
 
-<!-- <div class="container">
-    <app-home></app-home>
-</div> -->
