--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -6,10 +6,10 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-          <li class="nav-item" >
-            <a class="nav-link active" aria-current="page" routerLink="register">Reigster</a>
+          <li class="nav-item" *ngIf="!islogin">
+            <a class="nav-link active" aria-current="page" routerLink="register" >Reigster</a>
           </li>
-          <li class="nav-item" >
+          <li class="nav-item"*ngIf="!islogin" >
             <a class="nav-link" routerLink="login">Log in </a>
           </li>
 
